--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
   <div class="header">
     <div class="header-container">
       <div class="pull-left">
-        <a href="/"><div class="link">
-          <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
-        </div></a>
+        <a href="/">
+          <div class="link">
+            <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
+          </div>
+        </a>
         <% if current_user %>
           <a href="#browse">
             <div class="link">
@@ -39,13 +41,13 @@
               Dashboard
             </div>
           </a>
-          <a href="#about">
-            <div class="link">
-              <i class="icon-question-sign"></i>
-              About
-            </div>
-          </a>
         <% end %>
+        <a href="#about">
+          <div class="link">
+            <i class="icon-question-sign"></i>
+            About
+          </div>
+        </a>
       </div>
       <div class="pull-right">
         <% if current_user %>
@@ -69,8 +71,10 @@
           </a>
         <% else %>
           <a href="/login">
-            <i class="icon-thumbs-up"></i>
-            <div class="link">Login</div>
+            <div class="link">
+              <i class="icon-thumbs-up"></i>
+              Login
+            </div>
           </a>
         <% end %>
       </div>
