--- a/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
@@ -1,5 +1,5 @@
 <div class='gandalf-popover-head' style='background-color: <%= color %>;'>
-  <strong><%= e.get("name") %></strong>
+  <%= e.get("name") %>
   <span class="close">×</span>
 </div>
 <div class="gandalf-popover-body show-event">
