--- a/app/assets/javascripts/backbone/templates/popover/events/edit.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/edit.jst.ejs
@@ -1,5 +1,5 @@
 <div class='gandalf-popover-head' style='background-color: <%= color %>;'>
-  <strong>Editing <%= event.get("name") %></strong>
+  Editing <%= event.get("name") %>
   <span class="close">×</span>
 </div>
 <div class="gandalf-popover-body new-event">
