--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -1,10 +1,15 @@
 input, textarea {
+  resize: none;
   &.error {
     border-color: #B94A48;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   }
+}
+
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+  @include border-radius(0);
 }
 
 .btn-toolbar > a {
