--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -54,11 +54,15 @@ $cal-z: 10;
   .cal-day {
     position: relative;
     overflow: hidden;
-    background-color: #f5f5f5;
+    background-color: white;
+    border-right: 1px solid #eee;
+    border-bottom: 1px solid #eee;
   }
+  /*
   tr:nth-child(odd) .cal-day:nth-child(odd), tr:nth-child(even) .cal-day:nth-child(even) {
     background-color: #fdfdfd;
   }
+  */
 }
 
 .hour-day {
@@ -66,10 +70,10 @@ $cal-z: 10;
   position: relative;
   z-index: -5;
   &:nth-child(even) {
-    border-bottom: 1pt solid #ddd;
+    border-bottom: 1pt solid #eee;
   }
   &:nth-child(odd) {
-    border-bottom: 1pt solid #ebebeb;
+    border-bottom: 1pt solid #fafafa;
   }
 }
 
