--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -86,27 +86,49 @@ h3 {
   font-weight: bold;
   @include transition(all 0.1s);
   display: inline-block;
-  padding: 0 10px;
+  padding: 0 15px;
   &:hover {
     text-decoration: none;
     color: darken($blue, 10%);
     background: #fafafa;
-    @include box-shadow(inset 0 0 1px rgba(black, 0.2));
   }
 }
 
+.logo-link {
+  border-left: 1px solid #dadada;
+  padding: 0px 12px;
+}
+
 #logo {
-  height: 30px;
-  width: 30px;
-  vertical-align: -15%;
+  height: 35px;
+  width: 35px;
+  vertical-align: -12px;
 }
 
 .pull-left .link {
   border-right: 1px solid #dadada;
 }
 
-.pull-right .link {
-  border-left: 1px solid #dadada;
+#user-dropdown ul {
+  display: none;
+}
+
+.dropdown-link {
+  line-height: 40px;
+  border-top: 1px solid #dadada;
+  @include calc(width, 100%, 30px);
+}
+
+#user-dropdown {
+  cursor: pointer;
+  border: 1px solid #dadada;
+  border-top: none;
+  &:hover {
+    background: #fafafa;
+    ul {
+      display: block;
+    }
+  }
 }
 
 /* ================== LAYOUT =============== */
@@ -149,7 +171,7 @@ h3 {
 .content-header {
   > h1 {
     margin: 20px 0 30px;
-    color: darken($blue, 30%);
+    color: #333;
   }
 }
 
