--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -14,6 +14,15 @@
   margin-bottom: 20px;
 }
 
+//Notice for when there are no events
+.feed-notice {
+  text-align: center;
+  @include HN-Bold;
+  font-size: 30px; 
+  margin-top: 50px;
+  color: #bbb; 
+}
+
 .feed-event {
   background: white;
   position: relative;
