new event working

--- a/app/assets/javascripts/backbone/templates/dashboard/users/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/users/index.jst.ejs
@@ -1,8 +1,11 @@
 <div id="organization-users">
-  <h4 class='pull-left' style='margin: 0 0 30px;'>Subscribers</h4>
+  <h4 class='pull-left' style='margin: 0 0 20px;'>Subscribers</h4>
   <a id="email-subscribers-btn" class="btn btn-mini btn-primary pull-right" href='#' target='_blank'>
     Email selected subscribers
   </a>
+  <br>
+  <br>
+  <b class='dash-list-count pull-left'></b>
   <table class='dash-list tablesorter'>
     <thead>
       <tr>
