--- a/app/assets/javascripts/backbone/templates/popover/events/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/new.jst.ejs
@@ -3,7 +3,7 @@
   <span class="close">×</span>
 </div>
 <div class="gandalf-popover-body new-event">
-  <form id='new-event-form' action="#">
+  <form id='new-event-form' class='event-form' action="#">
     <!-- Names are Ruby-style strings intentionally! Don't change! -->
     <input type="hidden" name='organization_id' value=<%= org.get("id") %> />
     <p>Name</p>
