--- a/app/assets/javascripts/backbone/templates/dashboard/menu.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/menu.jst.ejs
@@ -1,3 +1,4 @@
 <a href="#dashboard/<%= id %>/events"><li data-type='events'>Events</li></a>
 <a href='#dashboard/<%= id %>/users'><li data-type='users'>Users</li></a>
+<a href='#dashboard/<%= id %>/admins'><li data-type='admins'>Admins</li></a>
 <a href="#dashboard/<%= id %>/settings"><li data-type='settings'>Settings</li></a>
