--- a/app/assets/javascripts/backbone/templates/dashboard/users/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/users/index.jst.ejs
@@ -3,7 +3,7 @@
   <a id="email-subscribers-btn" class="btn btn-mini btn-primary pull-right" href='#' target='_blank'>
     Email selected subscribers
   </a>
-  <table class='dash-list tablesorter'>
+  <table class='users-table'>
     <thead>
       <tr>
         <td>Name</td>
@@ -15,6 +15,6 @@
         </td>
       </tr>
     </thead>
-    <tbody class='dash-list-body'></tbody>
+    <tbody class='users-table-body'></tbody>
   </table>
 </div>
