refactored cal nav

--- a/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
@@ -1,21 +1,7 @@
 <div class="content-calendar"></div>
 <div class="content-body">
   <div class="container">
-    <div class="cal-nav">
-      <a href="#calendar/today/week" class="btn btn-small">Today</a>
-      <div class="btn-group">
-        <a class="btn btn-small previous">&lt;</a>
-        <span class="btn btn-small cal-header-date" style="font-size: 14px;"></span>
-        <a class="btn btn-small next">&gt;</a>
-      </div>
-      <div class="btn btn-small toggle-multiday" rel='tooltip' title='Toggle multiday event visibility'>
-        <i class='icon-eye-close'></i>
-      </div>
-      <div class="btn-group pull-right">
-        <a class="btn btn-small week">Week</a>
-        <a class="btn btn-small month">Month</a>
-      </div>
-    </div>
+    <div class="content-cal-nav"></div>
     <div class="body-feed"></div>
   </div>
 </div>
