--- a/app/assets/javascripts/backbone/templates/popover/events/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/new.jst.ejs
@@ -9,15 +9,15 @@
     <p>Name</p>
     <input type="text" name="name" maxlength="50" placeholder="1 hour of awesomeness" />
     <p>Place</p>
-    <input type="text" name="location" maxlength="50" placeholder="Camp awesome" />
+    <input type="text" name="location" maxlength="50" placeholder="Camp awesome" data-provide="typeahead" autocomplete="off" />
     <p>From</p>
-    <input type="datetime" name='start_at_date' placeholder='now' />
+    <input type="datetime" name='start_at_date' placeholder='now' value=<%= moment().format('MM/DD/YYYY') %> />
     <div class="at">at</div>
-    <input type="time" name='start_at_time' placeholder='12:01 a.m.'/>
+    <input type="time" name='start_at_time' placeholder='12:01 a.m.' value=<%= moment().format('HH:mm') %> />
     <p>To</p>
-    <input type="datetime" name='end_at_date' placeholder='forever' />
+    <input type="datetime" name='end_at_date' placeholder='forever' value=<%= moment().add('h',1).format('MM/DD/YYYY') %> />
     <div class="at">at</div>
-    <input type="time" name='end_at_time' placeholder='12:01 a.m.'/>
+    <input type="time" name='end_at_time' placeholder='12:01 a.m.' value=<%= moment().add('h',1).format('HH:mm') %> />
     <p>Description</p>
     <textarea name="description" id="" cols="30" rows="10" placeholder="This will be awesome TO THE MAX."></textarea>
     <br/>
