calendar navigation on category and organization pages

--- a/app/assets/javascripts/backbone/templates/organizations/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/show.jst.ejs
@@ -1,6 +1,7 @@
 <div class="content-calendar"></div>
 <div class="content-body">
   <div class="container">
+    <div class="content-cal-nav"></div>
     <div class="body-header">
       <h1><%= organization.get('name') %></h1>
       <button class="follow"></button>
