--- a/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
@@ -2,6 +2,7 @@
 </div>
 <div class="content-body">
   <div class="container">
+    <div class="content-cal-nav"></div>
     <div class="body-header">
       <h1><%= category.get('name') %></h1>
       <button class="follow"></button>
