fixes for presentation

--- a/app/assets/javascripts/backbone/templates/dashboard/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/events/show.jst.ejs
@@ -1,5 +1,5 @@
 <td>
-  <div class="image loading"></div>
+  <div class="image"></div>
 </td>
 <td>
   <div class="name"><b><%= event.get('name') %></b></div>
