--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <% if current_user %>
           <a href="#browse">
             <div class="link">
-              Browse
+              Discover
             </div>
           </a>
           <a href="#calendar">
