follow button working

--- a/app/assets/javascripts/backbone/templates/organizations/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/show.jst.ejs
@@ -4,7 +4,7 @@
     <div class="content-cal-nav"></div>
     <div class="body-header">
       <h1><%= organization.get('name') %></h1>
-      <button class="follow"></button>
+      <button class="btn follow-button"></button>
     </div>
     <% if( organization.get('categories') ) { %>
       <div class="organization-categories">
