fixed following bug

--- a/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
@@ -5,7 +5,7 @@
     <div class="content-cal-nav"></div>
     <div class="body-header">
       <h1><%= category.get('name') %></h1>
-      <button class="follow"></button>
+      <button class="btn follow-button"></button>
     </div>
   </div>
 </div>
