--- a/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
@@ -7,5 +7,6 @@
       <h1><%= category.get('name') %></h1>
       <button class="btn follow-button"></button>
     </div>
+    <div class="body-feed"></div>
   </div>
 </div>
