--- a/app/assets/javascripts/backbone/templates/preferences/subscription.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/preferences/subscription.jst.ejs
@@ -1,4 +1,4 @@
-<tr>
+<tr class=<%= sub.subscribeable_type.toLowerCase() %>>
   <td class="name"><a href="<%= url %>"><%= sub.subscribeable.name %></a></td>
   <td class="type"><%= sub.subscribeable_type %></td>
   <td>
