--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,11 @@
             About
           </div>
         </a>
+        <a href="/bulletin" data-remote="true">
+          <div class="link">
+            Test Bulletin
+          </div>
+        </a>
       </div>
       <div class="pull-right">
         <% if current_user %>
