--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "bourbon";
 @import "bootstrap";
 @import "backbone-forms-rails";
+@import "chosen";
 @import "mixins";
 @import "bootstrap_override";
 @import "main";
