added info to calendar/feed event show

--- a/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
@@ -1,5 +1,6 @@
 <div class='gandalf-popover-head' style='background-color: <%= color %>;'>
   <%= e.get("name") %>
+  <i class="icon-question-sign why"></i>
   <span class="close">×</span>
 </div>
 <div class="gandalf-popover-body show-event">
