--- a/app/assets/stylesheets/popover.scss
+++ b/app/assets/stylesheets/popover.scss
@@ -24,12 +24,22 @@ $popover-width: 500px;
   background-color: rgba(#eee, 0.9);
   @include box-shadow(0 0px 10px 0 black);
 
+  a {
+    color: rgb(14, 99, 207);
+  }
+
   .close {
     position: absolute;
     top: 10px;
     right: 10px;
     line-height: 15px;
     opacity: 0.4;
+  }
+
+  .why {
+    position: absolute;
+    top: 11px;
+    right: 30px;
   }
 }
 
