--- a/app/assets/stylesheets/popover.scss
+++ b/app/assets/stylesheets/popover.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 100%; height: 100%;
   top: 0; left: 0;
-  z-index: 100;
+  z-index: 104;
   background-color: rgba(black, 0.6);
   display: none;
 }
@@ -19,7 +19,7 @@ $popover-width: 500px;
   left: 50%;
   width: $popover-width;
   margin-left: -$popover-width/2;
-  z-index: 101;
+  z-index: 105;
   display: none;
   background-color: rgba(#eee, 0.9);
   @include box-shadow(0 0px 10px 0 black);
@@ -71,28 +71,42 @@ $popover-width: 500px;
 
 /* Specific to views */
 
+$popover-form-width: 0.9*($popover-width - 2*$popover-padding);
+$input-padding: 6px; // From Bootstrap
+$popover-input-width: $popover-form-width - 2*$input-padding - 2px;
 .event-form {
-  width: 80%;
+  width: 450px;   // 0.9 * $popover-width
   margin: 0 auto;
   p {
     margin: 0;
   }
   input, textarea {
-    width: 90%;
+    width: $popover-input-width;
   }
-  input[type='datetime'] {
-    width: 55%;
+  input[name=location] {
+    width: 0.65 * $popover-input-width ;
   }
-
-  input[type='time'] {
-    width: 25%;
+  input[name=room_number] {
+    width: 0.2 * $popover-input-width;
+    text-align: right;
+  }
+  input[type=datetime] {
+    width: 0.7 * $popover-input-width;
+  }
+  input[type=time] {
+    width: 0.2 * $popover-input-width;
   }
   textarea {
     max-height: 100px;
   }
   .at {
     display: inline-block;
-    width: 5%;
+    width: 0.05 * $popover-input-width;
+    text-align: center;
+  }
+  .room {
+    display: inline-block;
+    width: 0.1 * $popover-input-width;
     text-align: center;
   }
 }
