--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -5,7 +5,6 @@ $cal-head-height: 70px;
 $cal-top-pad: 10px;
 $hour-height: 4.1667%;
 $hour-height-floored: 4%;
-$cal-z: 10;
 
 // Redundant styling—here just to change bg color
 .calendar {
@@ -29,10 +28,15 @@ $cal-z: 10;
 }
 
 .cal-day {
-  position: relative;
   &.today {
     background-color: rgba($blue, 0.2);
   }
+}
+
+.cal-day-inner {
+  position: relative;
+  width: 100%;
+  height: $calendar-height;
 }
 
 .cal-week .cal-day {
@@ -168,7 +172,7 @@ $test-color: lighten(#0f91ec, 20%);
   z-index: $cal-z;
   border: 1pt solid transparent;
   background-color: rgba($test-color,0.7);
-  @include transition(all 0.2s, opacity 0.5s);
+  @include transition(all 0.2s);
   cursor: pointer;
   font-size: 8px;
   line-height: 12px;
@@ -212,7 +216,7 @@ $test-color: lighten(#0f91ec, 20%);
   line-height: 150%;
   overflow: hidden;
   cursor: pointer;
-  z-index: $cal-z + 5;
+  z-index: $cal-z + 5;              // At most 4 calendar events in a row
   @include transition(opacity 0.2s);
   $multiday-border: 1px solid #aaa;
   border: $multiday-border;
