--- a/app/assets/javascripts/backbone/templates/calendar/month/day.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/month/day.jst.ejs
@@ -1,7 +1,9 @@
-<div class="month-date">
-  <% if(date.date() === 1) { %>
-    <%= date.format("MMM") %>
-  <% } %>
-  <%= date.format("D") %>
+<div class="cal-day-inner">
+  <div class="month-date">
+    <% if(date.date() === 1) { %>
+      <%= date.format("MMM") %>
+    <% } %>
+    <%= date.format("D") %>
+  </div>
+  <div class="cal-events"></div>
 </div>
-<div class="cal-events"></div>
