new calendar layout

--- a/app/assets/javascripts/backbone/templates/calendar_nav/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar_nav/index.jst.ejs
@@ -1,15 +1,15 @@
-<a href="<%= today %>" class="btn btn-small">Today</a>
+<a href="<%= today %>" class="btn btn-mini">Today</a>
 <div class="btn-group">
-  <a class="btn btn-small previous" href="<%= prevLink %>">&lt;</a>
-  <span class="btn btn-small cal-header-date" style="font-size: 14px;">
+  <a class="btn btn-mini previous" href="<%= prevLink %>">&lt;</a>
+  <span class="btn btn-mini cal-header-date">
     <%= thisT %>
   </span>
-  <a class="btn btn-small next" href="<%= nextLink %>">&gt;</a>
+  <a class="btn btn-mini next" href="<%= nextLink %>">&gt;</a>
 </div>
-<div class="btn btn-small toggle-multiday" rel='tooltip' title='Toggle multiday event visibility'>
+<div class="btn btn-mini toggle-multiday" rel='tooltip' title='Toggle multiday event visibility'>
   <i class='icon-eye-close'></i>
 </div>
 <div class="btn-group pull-right">
-  <a class="btn btn-small week" href="<%= otherLink %>">Week</a>
-  <a class="btn btn-small month" href="<%= otherLink %>">Month</a>
+  <a class="btn btn-mini week" href="<%= otherLink %>">Week</a>
+  <a class="btn btn-mini month" href="<%= otherLink %>">Month</a>
 </div>
