--- a/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
@@ -1,3 +1,6 @@
+<div class="content-calendar-nav">
+  <div class="container"></div>
+</div>
 <div class="content-calendar"></div>
 <div class="content-body">
   <div class="container">
