--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -16,6 +16,10 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   vertical-align: top;
 }
 
+.btn-group {
+  vertical-align: top;
+}
+
 .popover {
   border-radius: 0;
   font-size: 12px;
