--- a/app/assets/javascripts/backbone/templates/calendar/week/multiday_event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/week/multiday_event.jst.ejs
@@ -2,7 +2,8 @@
   <% if(continued) { %>
     <i class='icon-arrow-left pull-left'></i> &nbsp;
   <% } %>
-  <%= e.get("name") %>
+  <b><%= e.get("name") %></b>&nbsp; 
+  <%= startAt.format("M/D") %> - <%= endAt.format("M/D") %> 
   <% if(continues) { %>
     <i class='icon-arrow-right pull-right'></i>
   <% } %>
