--- a/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
@@ -5,6 +5,7 @@
 <div class="content-body">
   <div class="container">
     <div class="content-cal-nav"></div>
+    <h2>Your events</h2>
     <div class="body-feed"></div>
   </div>
 </div>
